--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "express": "^4.13.4",
     "if-env": "^1.0.0",
     "json-loader": "^0.5.4",
-    "node-sass": "^4.5.3",
     "raw-loader": "^0.5.1",
     "react": "^0.14.9",
     "react-dom": "^0.14.7",
@@ -22,10 +21,12 @@
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
     "http-server": "^0.8.5",
+    "node-sass": "^4.5.3",
     "proxyquire": "^1.8.0",
     "react-hot-loader": "^1.3.0",
     "react-scripts": "0.9.5",
     "rewire": "^2.5.2",
+    "sass-loader": "^6.0.6",
     "webpack": "^1.9.1",
     "webpack-dev-server": "^1.14.1"
   },
